[gd_scene load_steps=5 format=2]

[ext_resource path="res://inimigos/boss/boss_final/Final_Boss.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.7431
height = 74.4024

[sub_resource type="CapsuleShape2D" id=2]
radius = 20.5155
height = 76.4027

[node name="Final_Boss" type="KinematicBody2D" groups=[
"enemie",
]]
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -0.896217, 6.45274 )
scale = Vector2( 0.635913, 1.8402 )
texture = ExtResource( 2 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 11.7074 )
shape = SubResource( 1 )

[node name="animation" type="AnimationPlayer" parent="."]

[node name="delay_attack1" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="delay_attack2" type="Timer" parent="."]
wait_time = 2.0

[node name="delay_attack3" type="Timer" parent="."]
wait_time = 3.0

[node name="change_attack" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="area_corpo_mech" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_corpo_mech" groups=[
"enemie",
]]
position = Vector2( 0, 5 )
shape = SubResource( 2 )

[node name="cannon_fire" type="Position2D" parent="."]
position = Vector2( -20.0091, 0.663422 )

[node name="missile_launcher" type="Position2D" parent="."]
position = Vector2( 14.5754, -44.5836 )

[node name="trajectory" type="Position2D" parent="."]
position = Vector2( -108.03, -129.464 )

[node name="reload" type="Timer" parent="."]
wait_time = 2.0

[node name="impulse" type="Timer" parent="."]
[connection signal="timeout" from="delay_attack1" to="." method="_on_delay_attack1_timeout"]
[connection signal="timeout" from="delay_attack2" to="." method="_on_delay_attack2_timeout"]
[connection signal="timeout" from="delay_attack3" to="." method="_on_delay_attack3_timeout"]
[connection signal="timeout" from="change_attack" to="." method="_on_change_attack_timeout"]
[connection signal="area_entered" from="area_corpo_mech" to="." method="_on_area_corpo_mech_area_entered"]
[connection signal="timeout" from="reload" to="." method="_on_reload_timeout"]
[connection signal="timeout" from="impulse" to="." method="_on_impulse_timeout"]
